feat: AWS Deploy resource manager